# AGameWithGod

./: .classpath  .gitignore  .project  AGameWithGod.sln  CMakeLists.txt  README.md  README.txt
AGameWithGod/: AGameWithGod.rc  AGameWithGod.vcxproj  AGameWithGod.vcxproj.filters  Actor.cpp  Actor.h  Battle.cpp  Battle.h  BattleActor.cpp  BattleActor.h  Camera.cpp  Camera.h  Globals.cpp  Globals.h  Input.cpp  Input.h  Light.cpp  Light.h  Main.cpp  Matrix.cpp  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  PerlinNoise.h  PerlinTexture.cpp  PerlinTexture.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Shader0.txt  Shader1.txt  Shader2.txt  Shader3.txt  Shader4.txt  Shader5.txt  ShaderDebug.txt  Shaders.cpp  Shaders.h  SplashScreen.cpp  (+18 more)
AGameWithGod/Debug/: AGameWithGod.lastbuildstate  AGameWithGod.res  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc110.idb
AGameWithGod/x64/Debug/: AGameWithGod.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog  vc110.idb
Release/: Diffuse.frag  Diffuse.vert  ShaderDebug.txt  Terrain.frag  TextureLoaderOutput.txt  debug.txt
res/shaders/: Terrain.vert
src/: main.cpp  sdl_window.cpp  sdl_window.h
src/actors/: camera.cpp  camera.h  player.cpp  player.h  terrain.cpp  terrain.h
src/gl/: framebuffer.cpp  framebuffer.h  gl_context.cpp  gl_context.h  gl_texture.cpp  gl_texture.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h
src/glad/: glad.c  glad.h
src/interfaces/: renderable.cpp  renderable.h
src/systems/: renderer.cpp  renderer.h
x64/Debug/: AGameWithGod.ilk  Shader0.txt
